<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">demo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="insert_card">插入卡</string>
    <string name="down_fail">下载失败</string>
    <string name="is_downing">正在下载</string>
    <string name="down_success">下载成功</string>

    <string name="no_ccount_sign_up">还没有账号？马上注册</string>
    <string name="back">返回</string>
    <string name="notice">提示</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="i_know">知道了</string>
    <string name="confirm_logout">是否确认退出当前账号？</string>
    <string name="search">查询</string>
    <string name="collection">收藏查阅</string>
    <string name="username">手机号</string>
    <string name="hint_username">请填写手机号</string>
    <string name="hint_please_input_verify_code">请输入验证码</string>
    <string name="lab_verify_code">验证码</string>
    <string name="tip_verify_code_error">请输入正确验证码</string>
    <string name="regex_verify_code">^\\d{4}$</string>
    <string name="action_get_verify_code">获取验证码</string>
    <string name="password">密码</string>
    <string name="confirmPassword">确认密码</string>
    <string name="hint_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="login_page">登录页</string>
    <string name="logout">注销</string>
    <string name="auto_login">自动登录</string>

    <string name="hint_operator_name">你好</string>
    <string name="hello">Hello World, Date!</string>
    <string name="strInputAccHint">输入帐号</string>
    <string name="strAccInputLabel">帐号</string>
    <string name="strPswInputLabel">密码</string>
    <string name="register">注册</string>
    <string name="goto_login">已有账号？去登录</string>
    <string name="account_empty">用户名为空，请重新输入！</string>
    <string name="pwd_empty">密码为空，请重新输入！</string>
    <string name="please_input_code">请输入验证码！</string>
    <string name="pwd_not_fit_user">密码不正确，请重新输入！</string>
    <string name="pwd_new_empty">新密码为空，请重新输入！</string>
    <string name="pwd_check_empty">确认密码为空，请重新输入！</string>
    <string name="pwd_not_the_same">两次输入的密码不一致，请重新输入！</string>
    <string name="register_fail">注册用户失败，请重新尝试！</string>
    <string name="getMsg_fail">获取验证码失败</string>
    <string name="send_success">发送成功</string>
    <string name="register_success">注册成功！</string>
    <string name="resetpwd">密码修改</string>
    <string name="resetpwd_fail">密码修改失败，请重新尝试！</string>
    <string name="resetpwd_success">密码修改成功！</string>
    <string name="login_success">登陆成功！</string>
    <string name="cancel_success">注销成功！</string>
    <string name="login_fail">登录失败！请输入正确的用户名与密码！</string>
    <string name="cancel_fail">注销失败！请输入正确的用户名与密码！</string>
    <string name="name_already_exist">用户名已存在，请重新输入！</string>
    <string name="name_not_exist">用户名不存在，请重新输入！</string>
    <string name="user_login_success">用户登录，欢迎光临！</string>

    <string name="zfb_account_empty">请填写支付宝账号！</string>
    <string name="zfb_name_empty">请填写支付宝姓名！</string>

    <string name="homePage">主页</string>
    <string name="faxian">发现</string>
    <string name="qiandao">签到</string>
    <string name="me">我的</string>
    <string name="net_close">未连接到网络，请检查！</string>
    <string name="load_error">加载失败，请稍后重试</string>
    <string name="update_error">更新信息失败</string>
    <string name="update_error_tryLogin">更新信息失败，请重新登录</string>
    <string name="getUserInfo_error">获取用户信息失败</string>

    <string name="withdrawal_account">提现账户</string>
    <string name="withdraw">提现</string>
    <string name="tryPlay">试玩记录</string>
    <string name="noRecord">暂无记录</string>
    <string name="get_money">赚钱</string>
    <string name="read_get_money">阅读赚钱</string>
    <string name="myDownline">我的下线</string>
    <string name="lianxiwomen">联系我们</string>

    <string name="juxiangyou">聚享游sdk</string>
    <string name="Taojing91">91淘金CPL</string>

    <string name="meizhou_libao">每周礼包</string>
    <string name="task_libao">任务礼包</string>
    <string name="hot_tuijian">热门推荐</string>
    <string name="zhuanjingtop10">赚金TOP10</string>

    <!--权限-->
    <string name="need_agree_permissions">程序的正常运行需要您同意以下权限</string>
    <string name="to_set_open_permissions">程序的正常运行需要您在设置当中手动开启权限</string>
    <string name="agree">同意</string>
    <string name="openSet">打开设置</string>
    <string name="submit">提交</string>
    <string name="zfb_account">支付宝账号</string>
    <string name="zfb_name">支付宝姓名</string>
    <string name="input_zfb_account">请填写支付宝账号</string>
    <string name="input_zfb_name">请填写支付宝姓名</string>
    <string name="bind_zfb_success">绑定成功</string>
    <string name="withdrawal_account_tips">提现支付宝请确认正确，否则平台打款错误将不承担后果！支付宝绑定后，不可更改！一个支付宝仅允许绑定一个账号，一个支付宝重复绑定多个账号，一律封号</string>
    <string name="tx_amount">提现金额</string>
    <string name="tx_pwd">提现密码（登录密码）</string>
    <string name="tx_tips">最低提现%s元，提现1至2个工作日到账</string>
    <string name="tx_amount_empty">请填写提现金额</string>
    <string name="tx_pwd_empty">请填写提现密码（登录密码）</string>
    <string name="submit_success">提交成功</string>
    <string name="input_pwd">请填写密码</string>
    <string name="input_confirmPwd">请确认您的密码</string>
    <string name="input_old_pwd">请填写您的旧密码</string>
    <string name="input_new_pwd">请填写您的新密码</string>
    <string name="input_confirm_new_pwd">请再次填写您的新密码</string>
    <string name="yaoqingma">邀请码</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yiqiandao">已累计签到</string>
    <string name="jingriyiqiandao">今日已签到</string>
    <string name="qiandao_success_tishi">签到成功</string>
    <string name="jingqingqidai">敬请期待</string>

    <!--公告分隔符-->
    <string name="gonggaoSplit">#</string>

    <!--网易新闻接口-->
    <string name="news_url_163_toutiao">http://c.m.163.com/nc/article/headline/T1348647853363/0-40.html</string><!--头条-->
    <string name="news_url_163_tiyu">http://c.3g.163.com/nc/article/list/T1348649079062/0-20.html</string><!--体育-->
    <string name="news_url_163_yule">http://c.3g.163.com/nc/article/list/T1348648517839/0-20.html</string><!--娱乐-->
    <string name="news_url_163_car">http://c.m.163.com/nc/auto/list/6YOR5bee/0-20.html</string><!--汽车-->
    <string name="news_url_163_yundong">http://c.3g.163.com/nc/article/list/T1348649079062/0-20.html</string><!--运动-->

    <string name="emulator_tips">检测到当前设备为模拟器，请使用真是设备使用当前App</string>
    <string name="playNum_param1">%s次播放</string>
    <!--今日推荐-->
    <string name="game_lvzitiaotiao">驴子跳跳</string>
    <string name="game_zipai">字牌翻翻翻</string>
</resources>
