<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:gravity="center"
    android:orientation="vertical">


    <com.xuexiang.xui.widget.textview.supertextview.SuperTextView
        android:id="@+id/stv_register"
        style="@style/EditInfoItem"
        app:sEditTextButtonType="clear"
        app:sLeftViewWidth="70dp"
        app:sEditTextHint="@string/hint_username"
        app:sLeftTextString="@string/username" />


    <com.xuexiang.xui.widget.textview.supertextview.SuperTextView
        android:id="@+id/stv_register_pwd"
        style="@style/EditInfoItem"
        android:layout_marginTop="10dp"
        app:sEditTextButtonType="password"
        app:sEditTextHint="@string/hint_password"
        app:sLeftViewWidth="70dp"
        app:sLeftTextString="@string/password" />

    <com.xuexiang.xui.widget.textview.supertextview.SuperTextView
        android:id="@+id/stv_register_pwd_confirmPwd"
        style="@style/EditInfoItem"
        android:layout_marginTop="10dp"
        app:sEditTextButtonType="password"
        app:sEditTextHint="@string/input_confirmPwd"
        app:sLeftViewWidth="70dp"
        app:sLeftTextString="@string/confirmPassword" />


    <com.xuexiang.xui.widget.button.roundbutton.RoundButton
        android:id="@+id/register_btn_sure"
        style="@style/RoundButton"
        android:layout_marginTop="50dp"
        android:text="@string/register" />


    <TextView
        android:id="@+id/toLogin_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/goto_login"
        android:textSize="15sp"
        android:textColor="@color/grey" />


</LinearLayout>