<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.xuexiang.xui.widget.actionbar.TitleBar
        android:id="@+id/withdrawalAccount_titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tb_titleText="@string/withdrawal_account" />

    <com.xuexiang.xui.widget.edittext.ClearEditText
        android:id="@+id/account_clearEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleBar_height"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="50dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:hint="@string/input_zfb_account"
        android:textAlignment="viewStart" />

    <com.xuexiang.xui.widget.edittext.ClearEditText
        android:id="@+id/name_clearEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleBar_height"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:hint="@string/input_zfb_name"
        android:textAlignment="viewStart" />

    <TextView
        android:id="@+id/tips_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/withdrawal_account_tips"></TextView>

    <com.xuexiang.xui.widget.button.roundbutton.RoundButton
        android:id="@+id/login_btn_login"
        style="@style/RoundButton"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="50dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/submit" />


    <com.xuexiang.xui.widget.textview.supertextview.SuperTextView
        android:id="@+id/zfbAccount_superTextView"
        style="@style/superTextView_keyValue"
        android:layout_marginTop="50dp"
        app:sDividerLineType="none"
        android:enabled="false"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:visibility="gone"
        app:sLeftTextString="@string/zfb_account" />

    <com.xuexiang.xui.widget.textview.supertextview.SuperTextView
        android:id="@+id/zfbName_superTextView"
        style="@style/superTextView_keyValue"
        android:layout_marginTop="10dp"
        app:sDividerLineType="none"
        android:visibility="gone"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        app:sLeftTextString="@string/zfb_name" />



</LinearLayout>
