<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.xuexiang.xui.widget.actionbar.TitleBar
        android:id="@+id/withdrawalAccount_titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tb_titleText="@string/withdraw" />

    <com.xuexiang.xui.widget.edittext.ClearEditText
        android:id="@+id/tx_amount_clearEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleBar_height"
        android:inputType="number"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="50dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:hint="@string/tx_amount"
        android:textAlignment="viewStart" />

    <com.xuexiang.xui.widget.edittext.PasswordEditText
        android:id="@+id/tx_pwd_clearEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleBar_height"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:hint="@string/tx_pwd"
        android:inputType="textPassword"
        android:textAlignment="viewStart" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/tx_tips"></TextView>

    <com.xuexiang.xui.widget.button.roundbutton.RoundButton
        android:id="@+id/tx_submit_btn"
        style="@style/RoundButton"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="50dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/submit" />


</LinearLayout>