<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <com.xuexiang.xui.widget.actionbar.TitleBar
        android:id="@+id/resetPwd_titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tb_titleText="@string/resetpwd" />


    <com.xuexiang.xui.widget.edittext.PasswordEditText
        android:id="@+id/resetPwd_oldPwd_clearEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleBar_height"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="50dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:hint="@string/input_old_pwd"
        android:textAlignment="viewStart" />

    <com.xuexiang.xui.widget.edittext.PasswordEditText
        android:id="@+id/resetPwd_newPwd_clearEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleBar_height"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:hint="@string/input_new_pwd"
        android:inputType="textPassword"
        android:textAlignment="viewStart" />

    <com.xuexiang.xui.widget.edittext.PasswordEditText
        android:id="@+id/resetPwd_confirmNewPwd_clearEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleBar_height"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:hint="@string/input_confirm_new_pwd"
        android:inputType="textPassword"
        android:textAlignment="viewStart" />

    <com.xuexiang.xui.widget.button.roundbutton.RoundButton
        android:id="@+id/resetPwd_btn_sure"
        style="@style/RoundButton"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="50dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/resetpwd" />

</LinearLayout>