<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include layout="@layout/widget_title_bar_white" />


    <LinearLayout
        android:id="@+id/pager_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">


        <EditText
            android:id="@+id/edUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="21dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/bg_edittext_rounded"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="10dp"
            android:gravity="center_vertical|left"
            android:hint="@string/hint_username"
            android:padding="11dp"
            android:singleLine="true"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/edUserPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/bg_edittext_rounded"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="10dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="11dp"
            android:singleLine="true"
            android:textSize="16sp" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <CheckBox
                android:id="@+id/cb_autologin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:button="@null"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:textSize="16sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvForgetPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:layout_marginRight="30dp"
                android:text="@string/no_ccount_sign_up"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="16sp" />
        </FrameLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonHeight"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="21dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/rectangle_login_blue"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>


