<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

<!--        <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
            android:id="@+id/login_edit_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_username"
            app:met_clearButton="true"
            app:met_iconLeft="@string/register" />-->


        <com.xuexiang.xui.widget.textview.supertextview.SuperTextView
            android:id="@+id/stv_login_account"
            style="@style/EditInfoItem"
            android:inputType="textPersonName"
            app:sEditTextButtonType="clear"
            app:sEditTextHint="@string/hint_username"
            app:sLeftIconTint="?attr/colorAccent"
            app:sLeftTextString="@string/username" />


        <com.xuexiang.xui.widget.textview.supertextview.SuperTextView
            android:id="@+id/stv_login_pwd"
            style="@style/EditInfoItem"
            android:inputType="textPersonName"
            app:sEditTextButtonType="clear"
            app:sEditTextHint="@string/hint_password"
            app:sLeftIconTint="?attr/colorAccent"
            app:sLeftTextString="@string/password" />


        <TextView
            android:id="@+id/register_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:text="@string/no_ccount_sign_up" />


        <Button
            android:id="@+id/login_btn_login"
            style="@style/Button.Style"
            android:background="@drawable/xui_config_bg_blue_btn"
            android:layout_marginTop="50dp"
            android:text="登录"
            />


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/login_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_alignWithParentIfMissing="false"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="#ffffff"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/login_edit_pwd"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="20dp"
            android:drawableLeft="@android:drawable/ic_lock_idle_lock"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

        <!--        <EditText
                    android:id="@+id/login_edit_account"
                    android:layout_width="400dp"
                    android:layout_height="60dp"
                    android:layout_below="@+id/logo"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="20dp"
                    android:focusedByDefault="true"
                    android:drawableLeft="@android:drawable/ic_menu_myplaces"
                    android:hint="@string/hint_username"
                    android:inputType="textPersonName" />-->


        <!--     <Button
               android:id="@+id/login_btn_cancle"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:layout_below="@+id/login_btn_register"
               android:layout_alignParentStart="true"
               android:layout_alignParentLeft="true"
               android:layout_alignParentEnd="true"
               android:layout_alignParentRight="true"
               android:layout_marginTop="10dp"
               android:background="#3a1313"
               android:text="注销"
               android:textColor="#ffffff"
               android:textSize="20dp" />

                 <CheckBox
                      android:id="@+id/Login_Remember"
                      android:layout_width="100dp"
                      android:layout_height="20dp"
                      android:layout_below="@+id/login_edit_pwd"
                      android:layout_alignParentStart="true"
                      android:layout_alignParentLeft="true"
                      android:checked="false"
                      android:text="记住密码"
                      android:textSize="15dp" />

                 <TextView
                      android:id="@+id/login_text_change_pwd"
                      android:layout_width="60dp"
                      android:layout_height="20dp"
                      android:layout_below="@+id/login_edit_pwd"
                      android:layout_alignParentEnd="true"
                      android:layout_alignParentRight="true"
                      android:text="修改密码"
                      android:textSize="15dp" />-->




    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/login_success_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="15.0px"
        android:layout_marginTop="62.0px"
        android:layout_marginRight="15.0px"
        android:background="#ff3f3f3f"
        android:paddingTop="21.0px"
        android:paddingBottom="10.0px"
        android:visibility="gone">

        <TextView
            android:id="@+id/login_success_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#ff3f3f3f"
            android:textSize="20.0dip" />
    </RelativeLayout>

</LinearLayout>
