<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wx_gray_bg"
    android:orientation="vertical"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <com.xuexiang.xui.widget.banner.recycler.BannerLayout
            android:id="@+id/bl_horizontal"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:bl_autoPlaying="true"
            app:bl_centerScale="1.3"
            app:bl_itemSpace="10dp"
            app:bl_moveSpeed="1.8" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/home_meizhou"
                android:gravity="center"
                android:text="@string/meizhou_libao"></TextView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/home_task"
                android:gravity="center"
                android:text="@string/task_libao"></TextView>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/hot_tuijian"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/taojing91_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/homepage_taojin91"></ImageView>

            <ImageView
                android:id="@+id/aibianxian_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/homepage_aibianxian"></ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/juxiangwang_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/homepage_img1"></ImageView>

            <ImageView
                android:id="@+id/lin2Img2_imgView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:src="@drawable/homepage_img2"></ImageView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/lin3Img1_imgView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/homepage_img3"></ImageView>

            <ImageView
                android:id="@+id/lin3Img2_imgView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:src="@drawable/homepage_img4"></ImageView>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/taskGetMoney_imgView"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:scaleType="fitXY"
                android:src="@drawable/task_get_money"></ImageView>

            <ImageView
                android:id="@+id/readGetMoney_imgView"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:scaleType="center"
                android:src="@drawable/read_get_money"></ImageView>
        </LinearLayout>

    </LinearLayout>

</ScrollView>